--- a/index.html
+++ b/index.html
@@ -1,1 +1,33 @@
-Hello World
+<!DOCTYPE html>
+<style>
+  /* .center {
+    margin: auto;
+    width: 60%;
+    border: 3px solid #73ad21;
+    padding: 10px;
+  } */
+</style>
+<html>
+  <head lang="en">
+    <meta charset="UTF-8" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+    <title>Victoria Tiller</title>
+    <!-- <link rel="shortcut icon" href="/favicon.ico" /> -->
+    <link rel="stylesheet" href="screen.css" />
+  </head>
+  <div class="center">
+    <h1>Victoria "Vicki" Tiller</h1>
+    <h2>Front-End Software Engineer</h2>
+    <h4>and Leonardo da Vinci Enthusiast</h4>
+  </div>
+  <p>
+    I moved to Japan in 2016 to teach English, but five years and one pandemic
+    later I decide to return to the United States. Since returning, I’ve pivoted
+    into a career in web development. I am primarily a frontend engineer with
+    experience in the backend. Most recently I’ve been working in Typescript and
+    Angular with occasional Ruby (and Rails), but in the past I’ve worked with
+    React and C#. I’m a quick learner and have adapted to many environments,
+    both here and abroad. I am passionate about learning new skills and sharing
+    knowledge.
+  </p>
+</html>
