--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
 <!DOCTYPE html>
-<style>
-  /* .center {
-    margin: auto;
-    width: 60%;
-    border: 3px solid #73ad21;
-    padding: 10px;
-  } */
-</style>
 <html>
   <head lang="en">
     <meta charset="UTF-8" />
@@ -15,10 +7,10 @@
     <!-- <link rel="shortcut icon" href="/favicon.ico" /> -->
     <link rel="stylesheet" href="screen.css" />
   </head>
-  <div class="center">
-    <h1>Victoria "Vicki" Tiller</h1>
-    <h2>Front-End Software Engineer</h2>
-    <h4>and Leonardo da Vinci Enthusiast</h4>
+  <div class="opening">
+    <h1 class="center">Victoria "Vicki" Tiller</h1>
+    <h2 class="center">Front-End Software Engineer</h2>
+    <h4 class="center">and Leonardo da Vinci Enthusiast</h4>
   </div>
   <p>
     I moved to Japan in 2016 to teach English, but five years and one pandemic
