--- a/index.html
+++ b/index.html
@@ -12,14 +12,40 @@
     <h2 class="center">Front-End Software Engineer</h2>
     <h4 class="center">and Leonardo da Vinci Enthusiast</h4>
   </div>
-  <p>
-    I moved to Japan in 2016 to teach English, but five years and one pandemic
-    later I decide to return to the United States. Since returning, I’ve pivoted
-    into a career in web development. I am primarily a frontend engineer with
-    experience in the backend. Most recently I’ve been working in Typescript and
-    Angular with occasional Ruby (and Rails), but in the past I’ve worked with
-    React and C#. I’m a quick learner and have adapted to many environments,
-    both here and abroad. I am passionate about learning new skills and sharing
-    knowledge.
-  </p>
+  <body>
+    <p>
+      I moved to Japan in 2016 to teach English, but five years and one pandemic
+      later I decide to return to the United States. Since returning, I’ve
+      pivoted into a career in web development. I am primarily a frontend
+      engineer with experience in the backend. Most recently I’ve been working
+      in Typescript and Angular with occasional Ruby (and Rails), but in the
+      past I’ve worked with React and C#. I’m a quick learner and have adapted
+      to many environments, both here and abroad. I am passionate about learning
+      new skills and sharing knowledge.
+    </p>
+    <br />
+    <div class="portfolio">
+      <h3 class="center">Portfolio</h3>
+      <h5>
+        <a hre="https://gayoldtime-86967cd3285d.herokuapp.com/">Gay Old Time</a>
+      </h5>
+      <p>WIP Wiki about LGBT historical figures made in Ruby on Rails.</p>
+      <h5>
+        <a href="https://color-picker-hooks-victoriatiller.netlify.app/"
+          >Color Picker</a
+        >
+      </h5>
+      <p>A colorpicker made with javascript.</p>
+      <h5>
+        <a href="https://react-calculator-victoriatiller.netlify.app/"
+          >Calculator</a
+        >
+      </h5>
+      <p>A calculator made to practice react.</p>
+      <h5>
+        <a href="https://scoreboard-victoriatiller.netlify.app/">Scoreboard</a>
+      </h5>
+      <p>A simple volleyball scoreboard.</p>
+    </div>
+  </body>
 </html>
