--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
     <title>Victoria Tiller</title>
     <!-- <link rel="shortcut icon" href="/favicon.ico" /> -->
+    <link rel="icon" href="/images/favicon.ico" />
     <link rel="stylesheet" href="screen.css" />
   </head>
   <div class="opening">
@@ -12,7 +13,7 @@
     <h2 class="center">Front-End Software Engineer</h2>
     <h4 class="center">and Leonardo da Vinci Enthusiast</h4>
   </div>
-  <body>
+  <div class="about">
     <p>
       I moved to Japan in 2016 to teach English, but five years and one pandemic
       later I decide to return to the United States. Since returning, I’ve
@@ -23,29 +24,49 @@
       to many environments, both here and abroad. I am passionate about learning
       new skills and sharing knowledge.
     </p>
+    <img
+      src="images/MeAndGoofy.JPG"
+      alt="Vicki and Goofy at Hollywood Studios"
+    />
+  </div>
+  <body>
     <br />
     <div class="portfolio">
       <h3 class="center">Portfolio</h3>
       <h5>
-        <a hre="https://gayoldtime-86967cd3285d.herokuapp.com/">Gay Old Time</a>
+        <a href="https://gayoldtime-86967cd3285d.herokuapp.com/"
+          >Gay Old Time</a
+        >
       </h5>
-      <p>WIP Wiki about LGBT historical figures made in Ruby on Rails.</p>
+      <p>
+        WIP Wiki about LGBT historical figures made in Ruby on Rails. Github
+        repo <a href="https://github.com/vickiticki/gayoldtimeror">here</a>.
+      </p>
       <h5>
         <a href="https://color-picker-hooks-victoriatiller.netlify.app/"
           >Color Picker</a
         >
       </h5>
-      <p>A colorpicker made with javascript.</p>
+      <p>
+        A colorpicker made with javascript. Github repo
+        <a href="https://github.com/vickiticki/color-picker-hooks">here</a>.
+      </p>
       <h5>
         <a href="https://react-calculator-victoriatiller.netlify.app/"
           >Calculator</a
         >
       </h5>
-      <p>A calculator made to practice react.</p>
+      <p>
+        A calculator made to practice react. Github repo
+        <a ref="https://github.com/vickiticki/react-calculator">here</a>.
+      </p>
       <h5>
         <a href="https://scoreboard-victoriatiller.netlify.app/">Scoreboard</a>
       </h5>
-      <p>A simple volleyball scoreboard.</p>
+      <p>
+        A simple volleyball scoreboard. Github repo
+        <a. href="https://github.com/vickiticki/scoreboard">here</a.>
+      </p>
     </div>
   </body>
 </html>
