--- a/index.html
+++ b/index.html
@@ -58,15 +58,24 @@
       </h5>
       <p>
         A calculator made to practice react. Github repo
-        <a ref="https://github.com/vickiticki/react-calculator">here</a>.
+        <a href="https://github.com/vickiticki/react-calculator">here</a>.
       </p>
       <h5>
         <a href="https://scoreboard-victoriatiller.netlify.app/">Scoreboard</a>
       </h5>
       <p>
         A simple volleyball scoreboard. Github repo
-        <a. href="https://github.com/vickiticki/scoreboard">here</a.>
+        <a href="https://github.com/vickiticki/scoreboard">here</a>
       </p>
     </div>
+    <div class="contact">
+      <h3 class="center">Find Me:</h3>
+      <div class="links">
+        <a href="https://github.com/vickiticki">Github</a>
+        <a href="https://www.linkedin.com/in/vjtiller/">LinkedIn</a>
+        <a href="mailto: vijotiller@gmail.com">Email</a>
+      </div>
+    </div>
+    <h2 class="goodbye center">Thank you for visiting!</h2>
   </body>
 </html>
