--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head lang="en">
     <meta charset="UTF-8" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Victoria Tiller</title>
     <!-- <link rel="shortcut icon" href="/favicon.ico" /> -->
     <link rel="icon" href="/images/favicon.ico" />
@@ -49,7 +49,9 @@
       </h5>
       <p>
         A colorpicker made with javascript. Github repo
-        <a href="https://github.com/vickiticki/color-picker-hooks">here</a>.
+        <a href="https://github.com/vickiticki/color-picker-hooks" class=""
+          >here</a
+        >.
       </p>
       <h5>
         <a href="https://react-calculator-victoriatiller.netlify.app/"
@@ -71,9 +73,11 @@
     <div class="contact">
       <h3 class="center">Find Me:</h3>
       <div class="links">
-        <a href="https://github.com/vickiticki">Github</a>
-        <a href="https://www.linkedin.com/in/vjtiller/">LinkedIn</a>
-        <a href="mailto: vijotiller@gmail.com">Email</a>
+        <a href="https://github.com/vickiticki" class="center">Github</a>
+        <a href="https://www.linkedin.com/in/vjtiller/" class="center"
+          >LinkedIn</a
+        >
+        <a href="mailto: vijotiller@gmail.com" class="center">Email</a>
       </div>
     </div>
     <h2 class="goodbye center">Thank you for visiting!</h2>
