--- a/index.html
+++ b/index.html
@@ -33,42 +33,56 @@
     <br />
     <div class="portfolio">
       <h3 class="center">Portfolio</h3>
-      <h5>
-        <a href="https://gayoldtime-86967cd3285d.herokuapp.com/"
-          >Gay Old Time</a
-        >
-      </h5>
-      <p>
-        WIP Wiki about LGBT historical figures made in Ruby on Rails. Github
-        repo <a href="https://github.com/vickiticki/gayoldtimeror">here</a>.
-      </p>
-      <h5>
-        <a href="https://color-picker-hooks-victoriatiller.netlify.app/"
-          >Color Picker</a
-        >
-      </h5>
-      <p>
-        A colorpicker made with javascript. Github repo
-        <a href="https://github.com/vickiticki/color-picker-hooks" class=""
-          >here</a
-        >.
-      </p>
-      <h5>
-        <a href="https://react-calculator-victoriatiller.netlify.app/"
-          >Calculator</a
-        >
-      </h5>
-      <p>
-        A calculator made to practice react. Github repo
-        <a href="https://github.com/vickiticki/react-calculator">here</a>.
-      </p>
-      <h5>
-        <a href="https://scoreboard-victoriatiller.netlify.app/">Scoreboard</a>
-      </h5>
-      <p>
-        A simple volleyball scoreboard. Github repo
-        <a href="https://github.com/vickiticki/scoreboard">here</a>
-      </p>
+      <ul>
+        <li>
+          <h5>
+            <a href="https://gayoldtime-86967cd3285d.herokuapp.com/"
+              >Gay Old Time</a
+            >
+          </h5>
+          <p>
+            WIP Wiki about LGBT historical figures made in Ruby on Rails. Github
+            repo <a href="https://github.com/vickiticki/gayoldtimeror">here</a>.
+          </p>
+        </li>
+        <li>
+          <h5>
+            <a href="https://color-picker-hooks-victoriatiller.netlify.app/"
+              >Color Picker</a
+            >
+          </h5>
+          <p>
+            A colorpicker made with javascript. Github repo
+            <a href="https://github.com/vickiticki/color-picker-hooks" class=""
+              >here</a
+            >.
+          </p>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <h5>
+            <a href="https://react-calculator-victoriatiller.netlify.app/"
+              >Calculator</a
+            >
+          </h5>
+          <p>
+            A calculator made to practice react. Github repo
+            <a href="https://github.com/vickiticki/react-calculator">here</a>.
+          </p>
+        </li>
+        <li>
+          <h5>
+            <a href="https://scoreboard-victoriatiller.netlify.app/"
+              >Scoreboard</a
+            >
+          </h5>
+          <p>
+            A simple volleyball scoreboard. Github repo
+            <a href="https://github.com/vickiticki/scoreboard">here</a>
+          </p>
+        </li>
+      </ul>
     </div>
     <div class="contact">
       <h3 class="center">Find Me:</h3>
