--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
     <h4 class="center">and Leonardo da Vinci Enthusiast</h4>
   </div>
   <div class="about">
-    <p>
-      I moved to Japan in 2016 to teach English, but five years and one pandemic
-      later I decide to return to the United States. Since returning, I’ve
-      pivoted into a career in web development. I am primarily a frontend
-      engineer with experience in the backend. Most recently I’ve been working
-      in Typescript and Angular with occasional Ruby (and Rails), but in the
-      past I’ve worked with React and C#. I’m a quick learner and have adapted
-      to many environments, both here and abroad. I am passionate about learning
-      new skills and sharing knowledge.
-    </p>
+    <div class="bio">
+      <p>
+        I moved to Japan in 2016 to teach English, but five years and one
+        pandemic later I decide to return to the United States. Since returning,
+        I’ve pivoted into a career in web development. I am primarily a frontend
+        engineer with experience in the backend. Most recently I’ve been working
+        in Typescript and Angular with occasional Ruby (and Rails), but in the
+        past I’ve worked with React and C#. I’m a quick learner and have adapted
+        to many environments, both here and abroad. I am passionate about
+        learning new skills and sharing knowledge.
+      </p>
+    </div>
     <img
       src="images/MeAndGoofy.JPG"
       alt="Vicki and Goofy at Hollywood Studios"
@@ -92,6 +94,9 @@
           >LinkedIn</a
         >
         <a href="mailto: vijotiller@gmail.com" class="center">Email</a>
+        <a href="https://www.youtube.com/@vickitiller900" class="center"
+          >YouTube</a
+        >
       </div>
     </div>
     <h2 class="goodbye center">Thank you for visiting!</h2>
