--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <p>
         I moved to Japan in 2016 to teach English, but five years and one
         pandemic later I decide to return to the United States. Since returning,
-        I’ve pivoted into a career in web development. I am primarily a frontend
-        engineer with experience in the backend. Most recently I’ve been working
+        I’ve pivoted into a career in web development. I am a fullstack engineer with
+        more experience in the front-end. Most recently I’ve been working
         in Typescript and Angular with occasional Ruby (and Rails), but in the
         past I’ve worked with React and C#. I’m a quick learner and have adapted
         to many environments, both here and abroad. I am passionate about
@@ -54,7 +54,7 @@
             >
           </h5>
           <p>
-            A colorpicker made with javascript. Github repo
+            A colorpicker made with Javascript and React. Github repo
             <a href="https://github.com/vickiticki/color-picker-hooks" class=""
               >here</a
             >.
@@ -69,7 +69,7 @@
             >
           </h5>
           <p>
-            A calculator made to practice react. Github repo
+            A calculator made using Javascript and React. Github repo
             <a href="https://github.com/vickiticki/react-calculator">here</a>.
           </p>
         </li>
@@ -95,6 +95,12 @@
         >
         <a href="mailto: vijotiller@gmail.com" class="center">Email</a>
       </div>
+    </div>
+    <div class="contact">
+      <h3 class="center">More links:</h3>
+      <div class="links">
+        <a href="resume.pdf" target="_blank" class="center">Resume</a>
+        <a href="https://www.youtube.com/@vickitiller900" class="center">YouTube</a>
     </div>
     <h2 class="goodbye center">Thank you for visiting!</h2>
   </body>
