open in new tab

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
     <div class="contact">
       <h3 class="center">Find Me:</h3>
       <div class="links">
-        <a href="https://github.com/vickiticki" class="center">Github</a>
-        <a href="https://www.linkedin.com/in/vjtiller/" class="center"
+        <a href="https://github.com/vickiticki" class="center" target="_blank">Github</a>
+        <a href="https://www.linkedin.com/in/vjtiller/" class="center" target="_blank"
           >LinkedIn</a
         >
         <a href="mailto: vijotiller@gmail.com" class="center">Email</a>
@@ -100,7 +100,7 @@
       <h3 class="center">More links:</h3>
       <div class="links">
         <a href="resume.pdf" target="_blank" class="center">Resume</a>
-        <a href="https://www.youtube.com/@vickitiller900" class="center">YouTube</a>
+        <a href="https://www.youtube.com/@vickitiller900" class="center" target="_blank">YouTube</a>
     </div>
     <h2 class="goodbye center">Thank you for visiting!</h2>
   </body>
