--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <ul>
         <li>
           <h5>
-            <a href="https://gayoldtime-86967cd3285d.herokuapp.com/"
+            <a href="https://gayoldtime-86967cd3285d.herokuapp.com/" target="_blank"
               >Gay Old Time</a
             >
           </h5>
