--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <p>
         I moved to Japan in 2016 to teach English, but five years and one
         pandemic later I decided to return to the United States. Since returning,
-        I’ve pivoted into a career in web development. I am a fullstack engineer with
-        more experience in the front-end than back-end. Most recently I’ve been working
+        I’ve pivoted into a career in web development. I have experience as both a 
+        frontend and fullstack engineer. Most recently I’ve been working
         in Typescript and Angular with occasional Ruby (and Rails), but in the
         past I’ve worked with React and C#. I’m a quick learner and have adapted
         to many environments, both here and abroad. I am passionate about
